tests/negative/bad_export4.toit
// Copyright (C) 2020 Toitware ApS. All rights reserved.

import .bad_export5

export foo
